fix top nav to wrap better on various screen sizes

--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,12 @@ Lime Green: #94C947;
 Orange: #D94F2C;
 */
 
+:root {
+  --dark-green: #00673E;
+  --lime-green: #94C947;
+  -- orange: #D94F2C;
+}
+
 @-moz-viewport {
   width: device-width;
   scale: 1;
@@ -38,28 +44,30 @@ footer {
   background-color: #FAFAFA;
   padding-bottom: 2em;
 }
-nav {
+header nav {
   display: flex;
   flex-direction: column;
-  background-color: #00673E;
+  background-color: var(--dark-green);
 }
-nav ul {
+header nav ul {
   list-style-type: none;
   margin-top: 0.25rem;
   margin-bottom: 1.0rem;
   padding-right: 0.5rem;
 }
-nav ul li {
+header nav ul li {
   display: inline-block;
   text-align: center;
 }
-nav a {
+header nav a {
   padding-left: .25rem;
   padding-right: .25rem;
   font-size: 1rem;
+  color: white;
   text-decoration: none;
 }
-header nav a { color: white; }
+header header nav a { color: white; }
+
 aside nav ul li {
   display: block;
   text-align: left;
@@ -77,7 +85,7 @@ header .site-id {
   display:flex;
   flex-direction:column;
   flex:1;
-  background-color: #94C947;
+  background-color: var(--lime-green);
   padding: 1rem;
 }
 
@@ -120,7 +128,7 @@ section.news {
 section .newsitem {
   justify-self: stretch;
   height: 100%;
-  border: solid 1px #94C947;
+  border: solid 1px var(--lime-green);
   padding: 0rem;
   background-color: white;
 }
@@ -306,8 +314,8 @@ figcaption > ol li:before
 .formsum {
   display: flex;
   flex-direction: column;
-  border: 1px solid #94C947;
-  border-top: 6px solid #94C947;
+  border: 1px solid var(--lime-green);
+  border-top: 6px solid var(--lime-green);
   padding: 0.5em 0.5em 0em 0.5em;
   margin-bottom: 0.5rem;
 }
@@ -325,7 +333,7 @@ figcaption > ol li:before
   font-size: 1.5rem;
   margin-right: .25rem;
   background-position: left bottom;
-  color: #94C947;
+  color: var(--lime-green);
 }
 
 .completeincomplete > .incomplete::before {
@@ -334,7 +342,7 @@ figcaption > ol li:before
   font-size: 1.5rem;
   margin-right: .25rem;
   background-position: left bottom;
-  color: #94C947;
+  color: var(--lime-green);
 }
 
 .panel {
@@ -384,6 +392,9 @@ figcaption > ol li:before
   }
   nav ul li {
     display: inline;
+  }
+  header nav {
+    flex-direction: row;
   }
 
 }
